--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -1,4 +1,15 @@
-<homepage></homepage>
-<searchpage></searchpage>
-<stockpage></stockpage>
-<portfolio></portfolio>
+<div class="homepage">
+    <homepage></homepage>
+</div>
+
+<div class="searchpage">
+    <searchpage></searchpage>
+</div>
+
+<div class="stockpage">
+    <stockpage></stockpage>
+</div>
+
+<div class="portfolio">
+    <portfolio></portfolio>
+</div>
