--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,12 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">My Portfolio</a></li>
         <li class="nav-item"><a href="#" class="nav-link">About</a></li>
       </ul>
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+      <form class="form col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
         <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+        <button type="submit" class="btn btn-light btn-outline-success">Submit</button>
       </form>
     </header>
   </div>
