--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -1,4 +1,4 @@
-<div class="homepage">
+<!-- <div class="homepage">
     <homepage></homepage>
 </div>
 
@@ -12,4 +12,5 @@
 
 <div class="portfolio">
     <portfolio></portfolio>
-</div>
+</div> -->
+<router-outlet></router-outlet>
