--- a/src/app/searchpage/searchpage.component.html
+++ b/src/app/searchpage/searchpage.component.html
@@ -1,28 +1,16 @@
-<p>searchpage works!</p>
 <div class="container">
-  <h2>Results for: ' '</h2>
-  <div class="card">
-    <h5 class="card-header">Featured</h5>
-    <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+  <h2>Results for: '{{symbolSearch[this.symbolSearch.length-1]}}'</h2>
+  <div class="empty" *ngIf="stockList.length == 0">
+    <p>Your portfolio is empty. Search for a stock to add to your portfolio</p>
   </div>
-  <div class="card">
-    <h5 class="card-header">Featured</h5>
-    <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-  <div class="card">
-    <h5 class="card-header">Featured</h5>
-    <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+  <div class="searchlist" *ngFor="let stock of searchData">
+    <div class="card">
+      <h5 class="card-header">{{stock['ticker'] | uppercase}}</h5>
+      <div class="card-body">
+        <h5 class="card-title">{{stock['name']}}</h5>
+        <p class="card-text">${{stock['price']}} ({{stock['day_change']}})%</p>
+        <button class="btn btn-success" (click)="addToPortfolio({symbol: stock['ticker']})">Add</button>
+      </div>
     </div>
   </div>
 </div>
