--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,19 +1,19 @@
 <div class="sidebar">
   <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white">
-    <span class="fs-5 fw-semibold">My Portfolio</span>
+    <a class="none" routerLink='portfoliopage'><span class="fs-5 fw-semibold">My Portfolio</span></a>
     
     <div class="list-group list-group-flush border-bottom scrollarea">
       <ul *ngFor="let stock of stockList">
         <div class="stock">
-          <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
+          <a routerLink="stockpage/{{stock.symbol}}" class="list-group-item list-group-item-action py-3 lh-tight">
             <div class="d-flex w-100 align-items-center justify-content-between">
-              <strong class="mb-1">{{stock.symbol}}</strong>
+              <strong class="mb-1">{{stock.symbol | uppercase}}</strong>
             </div>
             <div class="col-10 mb-1 small">
               Some placeholder content in a paragraph below the heading and date.
             </div>
           </a>
-          <button type="button" class="btn btn-outline-danger">Remove</button>
+          <button type="button" class="btn btn-danger" (click)="removeFromPortfolio(stock)">Remove</button>
         </div>
       </ul>
     </div>
