--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,15 +1,15 @@
 <div class="container">
   <div class="trending">
     <h2>Trending</h2>
-    <div class="row row-cols-1 row-cols-md-3 g-4" *ngFor="let stock of trendingData">
-      <div class="col">
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title">{{stock['ticker']}}</h5>
-            <p class="card-text">{{stock['name']}}</p>
-            <p class="card-text">${{stock['price']}} ({{stock['day_change']}})%</p>
-            <button class="btn btn-success" (click)="addToPortfolio({symbol: stock['ticker']})">Add</button>
-          </div>
+    <div class="trendinglist" *ngFor="let stock of trendingData">
+      <div class="card">
+        <h5 class="card-header">{{stock['ticker'] | uppercase}}<button class="btn btn-success" (click)="addToPortfolio({symbol: stock['ticker']})">Add</button>
+        </h5>
+        <div class="card-body">
+          <h5 class="card-title">{{stock['name']}}</h5>
+          <p class="card-text">${{stock['price']}} <span [ngClass]="stock['day_change'] > 0 ? 'positive' : 'negative'"><span *ngIf="stock['day_change'] > 0 else negative">&#8679;</span><ng-template #negative>
+            <span>&#8681;</span>
+           </ng-template> ({{stock['day_change']}})%</span></p>
         </div>
       </div>
     </div>
@@ -26,25 +26,25 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <a href="{{trendingNews[0]['image_url']}}"><img src="{{trendingNews[0]['image_url']}}" class="d-block w-100"
-              alt="..." target="_blank"></a>
-          <div class="carousel-caption d-none d-md-block">
+          <a href="{{trendingNews[0]['image_url']}}" target="_blank"><img src="{{trendingNews[0]['image_url']}}" class="d-block w-100"
+              alt="..." style="height:330px;"></a>
+          <div class="text carousel-caption d-none d-md-block">
             <h5>{{trendingNews[0]['title']}}</h5>
             <p>{{trendingNews[0]['description']}}</p>
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <a href="{{trendingNews[1]['image_url']}}"><img src="{{trendingNews[1]['image_url']}}" class="d-block w-100"
-              alt="..." target="_blank"></a>
-          <div class="carousel-caption d-none d-md-block">
+          <a href="{{trendingNews[1]['image_url']}}" target="_blank"><img src="{{trendingNews[1]['image_url']}}" class="d-block w-100"
+              alt="..." style="height:330px;"></a>
+          <div class="text carousel-caption d-none d-md-block">
             <h5>{{trendingNews[1]['title']}}</h5>
             <p>{{trendingNews[2]['description']}}</p>
           </div>
         </div>
         <div class="carousel-item">
-          <a href="{{trendingNews[2]['image_url']}}"><img src="{{trendingNews[2]['image_url']}}" class="d-block w-100"
-              alt="..." target="_blank"></a>
-          <div class="carousel-caption d-none d-md-block">
+          <a href="{{trendingNews[2]['image_url']}}" target="_blank"><img src="{{trendingNews[2]['image_url']}}" class="d-block w-100"
+              alt="..." style="height:330px;"></a>
+          <div class="text carousel-caption d-none d-md-block">
             <h5>{{trendingNews[2]['title']}}</h5>
             <p>{{trendingNews[2]['description']}}</p>
           </div>
