--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -1,3 +1,31 @@
-.card-text{
-    width: 600px;
+.container{
+    width: 100%;
+}
+
+.positive{
+    color: green;
+}
+.negative{
+    color: red;
+}
+.trendinglist{
+    display: inline-block;
+}
+.card{
+    display: flex;
+    min-height: 200px;
+    max-width: 200px;
+    margin-right: 20px;
+}
+
+.card-header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.text{
+    display:inline;
+    background-color:#efefef;
+    opacity:70%;
+    border-radius: 20px;
 }
