--- a/src/app/stockpage/stockpage.component.scss
+++ b/src/app/stockpage/stockpage.component.scss
@@ -1,5 +1,9 @@
 .container{
     display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin: 0;
+    padding: 20px;
 }
 .containerHalf {
     flex: 1;
