--- a/src/app/stockpage/stockpage.component.html
+++ b/src/app/stockpage/stockpage.component.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="chart">
-            <chart [historicalData]="historicalData"></chart>
+            <chart [historicalData]="historicalData" [liveData]="liveData"></chart>
         </div>
 
     </div>
