--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Quicksand&display=swap" rel="stylesheet">
 <div class="whole">
   <div class="header">
-    <header class="d-flex flex-wrap justify-content-center text-white">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+    <header class="d-flex flex-wrap justify-content-center">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto">
         <img src="assets/logo.png" alt="logo" style="width: 95px; height: 80px;">
-        <a routerLink="homepage" class="none"><span class="fs-4"><h2><span class="bullish">Bullish</span> or <span class="bearish">Bearish</span>?</h2></span></a>
+        <a routerLink="homepage" class="none"><span class="fs-4 title"><h2><span class="bullish">Bullish</span> or <span class="bearish">Bearish</span>?</h2></span></a>
         
       </a>
 
