--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -2,6 +2,20 @@
     width: 100%;
 }
 
+.trending{
+    border-radius: 10px;
+    background-color: #B1D0E0;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.news{
+    border-radius: 10px;
+    background-color: #B1D0E0;
+    padding: 20px;
+    margin-top: 20px;
+}
+
 .positive{
     color: green;
 }
