--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -1,16 +1,3 @@
-<!-- <div class="homepage">
-    <homepage></homepage>
+<div class="container">
+    <router-outlet></router-outlet>
 </div>
-
-<div class="searchpage">
-    <searchpage></searchpage>
-</div>
-
-<div class="stockpage">
-    <stockpage></stockpage>
-</div>
-
-<div class="portfolio">
-    <portfolio></portfolio>
-</div> -->
-<router-outlet></router-outlet>
