--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,4 +1,9 @@
-.positive{
+.container{
+    border-radius: 10px;
+    background-color: #B1D0E0;
+    padding: 20px;
+    margin: 20px 15px;
+}.positive{
     color: green;
 }
 .negative{
