--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -10,3 +10,15 @@
         </div>
     </div>
 </div>
+
+<!-- DUMMY DATA
+    <div class="titlecard">
+    <div class="card">
+        <h5 class="card-header">TSLA</h5>
+        <div class="card-body">
+            <h5 class="card-title">Tesla inc</h5>
+            <p class="card-text">$1039.73 ⇧ (0.72)%</p>
+            <button class="btn btn-primary" (click)="removeFromPortfolio({symbol: stockData[0].ticker})">Remove</button>
+        </div>
+    </div>
+</div> -->
