--- a/src/app/searchresults/searchresults.component.html
+++ b/src/app/searchresults/searchresults.component.html
@@ -17,7 +17,8 @@
     </div>
   </div>
 
-  <!-- <div class="searchlist">
+  <!-- DUMMY DATA 
+    <div class="searchlist">
     <div class="card">
       <h5 class="card-header">AAPL</h5>
       <div class="card-body">
