--- a/src/app/searchresults/searchresults.component.scss
+++ b/src/app/searchresults/searchresults.component.scss
@@ -1,5 +1,9 @@
 .container{
     width: 100%;
+    border-radius: 10px;
+    background-color: #B1D0E0;
+    padding: 20px;
+    margin: 20px 15px;
 }
 
 .positive{
