--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,6 @@
-<div class="sidebar">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet"><div class="sidebar">
   <div class="titlediv d-flex flex-column align-items-stretch flex-shrink-0">
     <a class="none" routerLink='portfoliopage'><span class="title none fs-5 fw-semibold">My Portfolio</span></a>
     
