--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -13,6 +13,8 @@
 .title{
     margin: 10px auto;
     background-color: #efefef;
+    
+    text-decoration: none;
 
 }
 
@@ -39,7 +41,9 @@
 
 .none{
     text-decoration: none;
-    color:black;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bolder;
+    color: #1A374D;
     margin: 10px auto;
 
 }
