I like the layout of the page, although it's confusing what each component does. Also, the portofolioDB works great, but it's not initially clear that it's a service! The graphs had issues displaying, unsure if that's on the API or something else

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,7 @@
       <sidebar></sidebar>
     </div>
     <div class="page">
+      <!-- The page component seems to be mostly empty, why not just put the html content here? -->
       <page></page>
     </div>
   </div>
