--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -24,6 +24,7 @@
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
+      <!-- I would add alt tags to your images to make them accessible -->
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
           <a href="{{trendingNews[0]['image_url']}}" target="_blank"><img src="{{trendingNews[0]['image_url']}}" class="d-block w-100"
