post deploy adj

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -26,7 +26,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <a href="{{trendingNews[0]['image_url']}}" target="_blank"><img src="{{trendingNews[0]['image_url']}}" class="d-block w-100"
+          <a href="{{trendingNews[0]['url']}}" target="_blank"><img src="{{trendingNews[0]['image_url']}}" class="d-block w-100"
               alt="..." style="height:330px;"></a>
           <div class="text carousel-caption d-none d-md-block">
             <h5>{{trendingNews[0]['title']}}</h5>
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <a href="{{trendingNews[1]['image_url']}}" target="_blank"><img src="{{trendingNews[1]['image_url']}}" class="d-block w-100"
+          <a href="{{trendingNews[1]['url']}}" target="_blank"><img src="{{trendingNews[1]['image_url']}}" class="d-block w-100"
               alt="..." style="height:330px;"></a>
           <div class="text carousel-caption d-none d-md-block">
             <h5>{{trendingNews[1]['title']}}</h5>
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <a href="{{trendingNews[2]['image_url']}}" target="_blank"><img src="{{trendingNews[2]['image_url']}}" class="d-block w-100"
+          <a href="{{trendingNews[2]['url']}}" target="_blank"><img src="{{trendingNews[2]['image_url']}}" class="d-block w-100"
               alt="..." style="height:330px;"></a>
           <div class="text carousel-caption d-none d-md-block">
             <h5>{{trendingNews[2]['title']}}</h5>
