--- a/src/app/infopane/infopane.component.scss
+++ b/src/app/infopane/infopane.component.scss
@@ -4,3 +4,13 @@
 .negative{
     color: red;
 }
+.about{
+    min-height: 200px;
+}
+.text{
+    max-height: 200px;
+    overflow: scroll;
+}
+.bold{
+    font-weight: bolder;
+}
