--- a/src/app/infopane/infopane.component.html
+++ b/src/app/infopane/infopane.component.html
@@ -1,18 +1,21 @@
 <div class="card" style="width: 18rem;" *ngIf="stockData.length>0">
-  <div class="card-body">
-    <h5 class="card-title">About</h5>
-    <p class="card-text" style="max-height: 100px; overflow: scroll;">{{stockData[0].description}}</p>
+  <div class="card-body about">
+    <h4 class="card-title">About</h4>
+    <p class="card-text text">{{stockData[0].description}}</p>
   </div>
   <ul class="list-group list-group-flush">
-    <li class="list-group-item">{{stockData[0].address1}} {{stockData[0].city}} {{stockData[0].state}}
-      {{stockData[0].country}} {{stockData[0].zip}}</li>
-    <li class="list-group-item">Sector: {{stockData[0].sector}}</li>
-    <li class="list-group-item">Industry: {{stockData[0].industry}}</li>
+    <li class="list-group-item"><span class="bold">Headquarters: </span><br> {{stockData[0].address1}} <br>{{stockData[0].city}}, {{stockData[0].state}}
+      {{stockData[0].zip}}<br>
+      {{stockData[0].country}} </li>
+    <li class="list-group-item"><span class="bold">Sector: </span>{{stockData[0].sector}}</li>
+    <li class="list-group-item"><span class="bold">Industry: </span>{{stockData[0].industry}}</li>
   </ul>
   <div class="card-body">
-    <a href="{{stockData[0].website}}" class="card-link">{{stockData[0].website}}</a>
-
-    <a href="{{stockData[0].website}}" class="card-link">{{stockData[0].phone}}</a>
+    <span class="bold">Contact: </span>
+    <br>
+    <a href="{{stockData[0].website}}" class="card-link" target="_blank">{{stockData[0].website}}</a>
+    <br>
+    <a href="{{stockData[0].website}}" class="card-link" target="_blank" style="text-decoration: none; color: black;">{{stockData[0].phone}}</a>
   </div>
 </div>
 
