post deploy adj

--- a/src/app/infopane/infopane.component.html
+++ b/src/app/infopane/infopane.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 18rem;" *ngIf="stockData.length>0">
+<div class="card" *ngIf="stockData.length>0">
   <div class="card-body about">
     <h4 class="card-title">About</h4>
     <p class="card-text text">{{stockData[0].description}}</p>
