--- a/src/app/stockpage/stockpage.component.html
+++ b/src/app/stockpage/stockpage.component.html
@@ -24,11 +24,11 @@
             ></chart>
         </div>
     </div>
-    <div class="containerhalf">
-        <div class="infopane">
+    <div class="containerhalf2">
+        <div class="infopane containerQuarter">
             <infopane [stockName]="stockName"></infopane>
         </div>
-        <div class="news">
+        <div class="news containerQuarter">
             <news [stockName]="stockName"></news>
         </div>
     </div>
