--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -3,9 +3,13 @@
     background-color: #B1D0E0;
     padding: 20px;
     margin: 20px 15px;
+    min-height: 750px;
 }.positive{
     color: green;
 }
 .negative{
     color: red;
+}
+.portfolio{
+    margin-bottom: 15px;
 }
