--- a/src/app/stockpage/stockpage.component.html
+++ b/src/app/stockpage/stockpage.component.html
@@ -1,34 +1,42 @@
 <div class="container">
     <div class="containerhalf">
-        <div class="profile">
-            <profile [stockName]="stockName"></profile>
+        <div class="panel">
+            <div class="profile">
+                <profile [stockName]="stockName"></profile>
+            </div>
         </div>
-        <div class="chart">
-            <form class="chartinput" #chartinput="ngForm" (ngSubmit)="onSubmit(chartinput.valid)">
-                <label for="datemax">Start Date:</label>
-                <input type="date" id="datemax" name="datemax" max="{{todayString}}" required [(ngModel)]="startDate"><br><br>
-                <label for="datemin">End Date:</label>
-                <input type="date" id="datemin" name="datemin" max="{{todayString}}" required [(ngModel)]="endDate">
-                <label for="interval">Interval:</label>
-                <select id="inverval" name="inverval" required [(ngModel)]="interval">
-                    <option value="5m">5m</option>
-                    <option value="15m">15m</option>
-                    <option value="1h">1h</option>
-                    <option value="1d">1d</option>
-                </select>
-                <button id="update" type="submit" class="btn btn-primary" [disabled]="chartinput.invalid">Update</button>
-            </form>
-            <chart 
-            [historicalData]="historicalData" 
-            ></chart>
+        <div class="panel">
+            <div class="chart">
+                <form class="chartinput" #chartinput="ngForm" (ngSubmit)="onSubmit(chartinput.valid)">
+                    <label for="datemax">Start Date:</label>
+                    <input type="date" id="datemax" name="datemax" max="{{todayString}}" required [(ngModel)]="startDate"><br><br>
+                    <label for="datemin">End Date:</label>
+                    <input type="date" id="datemin" name="datemin" max="{{todayString}}" required [(ngModel)]="endDate">
+                    <label for="interval">Interval:</label>
+                    <select id="inverval" name="inverval" required [(ngModel)]="interval">
+                        <option value="5m">5m</option>
+                        <option value="15m">15m</option>
+                        <option value="1h">1h</option>
+                        <option value="1d">1d</option>
+                    </select>
+                    <button id="update" type="submit" class="btn btn-primary" [disabled]="chartinput.invalid">Update</button>
+                </form>
+                <chart 
+                [historicalData]="historicalData" 
+                ></chart>
+            </div>
         </div>
     </div>
     <div class="containerhalf2">
-        <div class="infopane containerQuarter">
-            <infopane [stockName]="stockName"></infopane>
+        <div class="panel">
+            <div class="infopane containerQuarter">
+                <infopane [stockName]="stockName"></infopane>
+            </div>
         </div>
-        <div class="news containerQuarter">
-            <news [stockName]="stockName"></news>
+        <div class="panel">
+            <div class="news containerQuarter">
+                <news [stockName]="stockName"></news>
+            </div>
         </div>
     </div>
 </div>
