--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -1,8 +1,34 @@
 .container{
     width: 100%;
+    min-height: 750px;
+}
+h2{
+    max-width: 1100px;
+    background-color:#B1D0E0 ;
+    margin: 20px 0 0 0;
+    padding: 5px 0 0 15px;
+    border-radius: 10px 10px 0 0;
+
+}
+.trendingContainer{
+    border-radius: 10px;
+    background-color: #B1D0E0;  
+    padding: 20px;
+    margin-top: 20px;
 }
 
 .trending{
+    
+    border-radius: 0 0 10px 10px;
+    background-color: #B1D0E0;  
+    padding: 20px;
+
+    max-width: 1100px;
+    display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
+.news{
     border-radius: 10px;
     background-color: #B1D0E0;
     padding: 20px;
@@ -19,7 +45,7 @@
     display: inline-block;
 }
 .card{
-    display: flex;
+    flex: 0 0 auto;
     min-height: 200px;
     max-width: 200px;
     margin-right: 20px;
@@ -35,4 +61,9 @@
     background-color:#efefef;
     opacity:70%;
     border-radius: 20px;
+}
+
+.image{
+    height: 300px;
+    object-fit: cover;
 }
