--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -3,7 +3,8 @@
         <h3>News</h3>
     </div>
     <ul class="list-group list-group-flush" *ngFor="let stock of newsResults">
-        <li class="list-group-item"><a href="{{stock.url}}" target="_blank">{{stock.title}}</a></li>
+        <li class="list-group-item"><a href="{{stock.url}}" target="_blank">{{stock.title}}</a>
+        <p>{{stock.description}}</p></li>
     </ul>
 
     <!-- DUMMY DATA
