--- a/src/app/stockpage/stockpage.component.scss
+++ b/src/app/stockpage/stockpage.component.scss
@@ -27,7 +27,6 @@
     flex: 1;
     
     width: 50%;
-   
 
 }
 
@@ -37,4 +36,12 @@
 
 .chart{
     display: flex;
+}
+.profile{
+    margin-bottom: 15px;
+
+}
+
+.panel{
+    margin-bottom: 15px;
 }
